--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: HackSXB
+email: contact@alsacedigitale.org
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://localhost:4000" # dev
+#url: "http://yesdev.it/hacksxb" # test
+#url: "http://hacksxb.com" # production
+twitter_username: hacksxb
+github_username:  alsacedigitale
 
 # Build settings
 markdown: kramdown
-theme: minima
 
 permalink: /:categories/:title.html
