--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ email: contact@alsacedigitale.org
 description: > # this means to ignore newlines until "baseurl:"
   HackSXB, la communauté de développeurs et makers à Strasbourg portée par Alsace Digitale
 baseurl: "" # the subpath of your site, e.g. /blog
-#url: "http://localhost:4000" # dev
-url: "http://hacksxb.com" # production
+url: "http://localhost:4000" # dev
+#url: "http://hacksxb.com" # production
 twitter_username: hacksxb
 github_username:  alsacedigitale
 
