Add repository for git-metadata

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ url: "http://hacksxb.com" # production
 twitter_username: hacksxb
 github_username:  alsacedigitale
 
+repository: AlsaceDigitale/www.hacksxb.org
+
 # Build settings
 markdown: kramdown
 
